Big modifications of pipeline logic

--- a/notebooks/scrape_booking.ipynb
+++ b/notebooks/scrape_booking.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ecc07ab9",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,28 @@
     "import urllib.parse\n",
     "from bs4 import BeautifulSoup\n",
     "import time\n",
-    "import random"
+    "import random\n",
+    "import boto3\n",
+    "from io import StringIO\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "\n",
+    "# Charger les variables d'environnement\n",
+    "load_dotenv()\n",
+    "\n",
+    "# Configuration AWS\n",
+    "AWS_REGION = 'eu-west-3'\n",
+    "BUCKET_NAME = 'projey-kayak'\n",
+    "AWS_ACCESS_KEY_ID = os.getenv('AWS_ACCESS_KEY_ID')\n",
+    "AWS_SECRET_ACCESS_KEY = os.getenv('AWS_SECRET_ACCESS_KEY')\n",
+    "\n",
+    "# Initialiser le client S3\n",
+    "s3_client = boto3.client(\n",
+    "    's3',\n",
+    "    region_name=AWS_REGION,\n",
+    "    aws_access_key_id=AWS_ACCESS_KEY_ID,\n",
+    "    aws_secret_access_key=AWS_SECRET_ACCESS_KEY\n",
+    ")"
    ]
   },
   {
@@ -34,14 +55,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2e7a3c2a",
+   "execution_count": 16,
+   "id": "f1582c73",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ TOP 5 chargé : ['Paris', 'Mont Saint Michel', 'Bayeux', 'Le Havre', 'Lille']\n"
+     ]
+    }
+   ],
    "source": [
-    "#Charger les villes\n",
-    "df_top_city = pd.read_csv('../city_data/df_top_5_city.csv')\n",
-    "cities = df_top_city['city'].tolist()"
+    "# Charger le TOP 5 des villes depuis S3\n",
+    "response = s3_client.get_object(\n",
+    "    Bucket=BUCKET_NAME,\n",
+    "    Key='processed/weather/top_5_cities.csv'\n",
+    ")\n",
+    "df_top_5 = pd.read_csv(StringIO(response['Body'].read().decode('utf-8')))\n",
+    "\n",
+    "cities = df_top_5['city'].tolist()\n",
+    "\n",
+    "print(f\"✅ TOP 5 chargé : {cities}\")"
    ]
   },
   {
@@ -49,12 +85,20 @@
    "id": "fec64b27",
    "metadata": {},
    "source": [
-    "# Récupérer le code html pour les 5 villes"
+    "# Scraper les 5 villes et récupérer les infos sur les hotels"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3645ddd",
+   "metadata": {},
+   "source": [
+    "## Initialisation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "id": "cbc94e0e",
    "metadata": {},
    "outputs": [],
@@ -74,45 +118,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1afd9dd6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Scraper chaque ville\n",
-    "for city in cities:\n",
-    "\n",
-    "    #Construire l'URL\n",
-    "    encoded_city = urllib.parse.quote_plus(city + \", France\")\n",
-    "    url = f\"https://www.booking.com/searchresults.html?ss={encoded_city}&order=bayesian_review_score&nflt=ht_id%3D204\"\n",
-    "\n",
-    "    #Récupérer la page\n",
-    "    response = requests.get(url, headers=headers)\n",
-    "\n",
-    "    #Sauvegarder le HTML\n",
-    "    filename = f\"booking_{city.replace(' ', '_').lower()}.html\"\n",
-    "    with open(\"html_data/\" + filename, 'w', encoding='utf-8') as file:\n",
-    "        file.write(response.text)\n",
-    "\n",
-    "    print(f\"HTML sauvegardé: {filename}\")\n",
-    "    print(f\"Status de la requête: {response.status_code}\")\n",
-    "    \n",
-    "    #Pause entre chaque ville\n",
-    "    time.sleep(random.uniform(10, 15))"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "ee416468",
-   "metadata": {},
-   "source": [
-    "# Extraire les informations du code html"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6b3884df",
+   "id": "80c624cd",
    "metadata": {},
    "source": [
     "## Fonction"
@@ -120,8 +127,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "efa03013",
+   "execution_count": 10,
+   "id": "2000c610",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f934226",
+   "id": "2f8ad948",
    "metadata": {},
    "source": [
     "## Extraction"
@@ -183,43 +190,74 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d32e3b0a",
+   "id": "6c75c77b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Liste pour stocker les hotels\n",
+    "# Scraping\n",
     "all_hotels = []\n",
-    "\n",
-    "#Parcourir chaque ville\n",
+    " \n",
     "for city in cities:\n",
-    "    filename = f\"booking_{city.replace(' ', '_').lower()}.html\"\n",
-    "    with open(\"html_data/\" + filename, 'r', encoding='utf-8') as file:\n",
-    "        html_content = file.read()\n",
-    "\n",
-    "    #Parser le HTML\n",
-    "    soup = BeautifulSoup(html_content, 'html.parser')\n",
-    "\n",
-    "    #Trouver les hotels\n",
+    "    encoded_city = urllib.parse.quote_plus(city + \", France\")\n",
+    "    url = f\"https://www.booking.com/searchresults.html?ss={encoded_city}&order=bayesian_review_score&nflt=ht_id%3D204\"\n",
+    "    \n",
+    "    response = requests.get(url, headers=headers)\n",
+    "    soup = BeautifulSoup(response.text, 'html.parser')\n",
     "    hotels = soup.find_all('div', {\"data-testid\": \"property-card\"})\n",
-    "\n",
-    "    print(f\"\\n\\n\\nNombre d'hôtels trouvés pour {city}: {len(hotels)}\")\n",
-    "\n",
-    "    #Extraire les informations des 5 premiers hotels\n",
-    "    for i, hotel in enumerate(hotels[:5]):\n",
+    "    \n",
+    "    for hotel in hotels[:5]:\n",
     "        hotel_info = extract_hotel_info(hotel)\n",
     "        hotel_info['city'] = city\n",
     "        all_hotels.append(hotel_info)\n",
-    "        print(f\"Hôtel {i+1}: {hotel_info['name']} - Note: {hotel_info['rating']}\")\n",
-    "\n",
-    "#Créer un dataframe avec tous les hôtels\n",
+    "    \n",
+    "    print(f\"✅ {city}: {len(hotels[:5])} hôtels extraits\")\n",
+    "    time.sleep(random.uniform(10, 15))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b8c3a2c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ DataFrame créé : 25 hôtels\n",
+      "     city                   name  \\\n",
+      "0  Bayeux       Villa Lara Hotel   \n",
+      "1  Bayeux      Domaine de Bayeux   \n",
+      "2  Bayeux  La Maison de Mathilde   \n",
+      "3  Bayeux         Belle Normandy   \n",
+      "4  Bayeux       Hôtel d'Argouges   \n",
+      "\n",
+      "                                                 url  \\\n",
+      "0  https://www.booking.com/hotel/fr/villa-lara-ha...   \n",
+      "1  https://www.booking.com/hotel/fr/domaine-de-ba...   \n",
+      "2  https://www.booking.com/hotel/fr/la-maison-de-...   \n",
+      "3  https://www.booking.com/hotel/fr/clos-des-cord...   \n",
+      "4  https://www.booking.com/hotel/fr/d-argouges.fr...   \n",
+      "\n",
+      "                                         description rating  \n",
+      "0  La Villa Lara Hotel est un petit boutique hôte...    9,6  \n",
+      "1  Le Domaine de Bayeux occupe une maison du XVII...    9,3  \n",
+      "2  La Maison de Mathilde vous accueille à Bayeux,...    8,9  \n",
+      "3  L’établissement Belle Normandy se trouve à Bay...    8,8  \n",
+      "4  L'Hôtel d'Argouges est un établissement du XVI...    8,7  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Créer le DataFrame avec les hôtels\n",
     "df_hotels = pd.DataFrame(all_hotels)\n",
     "\n",
-    "#Réorganiser les colonnes\n",
+    "# Réorganiser les colonnes\n",
     "colonnes = [\"city\", \"name\", \"url\", \"description\", \"rating\"]\n",
     "df_hotels = df_hotels[colonnes]\n",
     "\n",
-    "#Sauvegarder en csv\n",
-    "df_hotels.to_csv('../hotel_data/booking_hotels.csv', index=False, encoding='utf-8')"
+    "print(f\"✅ DataFrame créé : {len(df_hotels)} hôtels\")\n",
+    "print(df_hotels.head())"
    ]
   },
   {
@@ -227,33 +265,41 @@
    "id": "e0e22b2f",
    "metadata": {},
    "source": [
-    "# Combiner les datasets"
+    "# Export des données"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5632b75b",
+   "execution_count": 15,
+   "id": "9eb8d55a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ df_hotels uploadé sur S3 (raw/hotels/booking_hotels_raw.csv)\n"
+     ]
+    }
+   ],
    "source": [
-    "#Informations sur toutes les villes\n",
-    "df_hotel_meteo = pd.read_csv(\"../city_data/df_city.csv\", index_col=0)\n",
+    "# Uploader les données brutes des hôtels sur S3\n",
+    "csv_buffer = StringIO()\n",
+    "df_hotels.to_csv(csv_buffer, index=False)\n",
     "\n",
-    "#Garder uniquement les villes où il fait le plus beau\n",
-    "df_hotel_meteo = df_hotel_meteo.head()\n",
+    "s3_client.put_object(\n",
+    "    Bucket=BUCKET_NAME,\n",
+    "    Key='raw/hotels/booking_hotels_raw.csv',\n",
+    "    Body=csv_buffer.getvalue()\n",
+    ")\n",
     "\n",
-    "#Ajouter les informations météo aux hôtels\n",
-    "df_hotel_meteo = df_hotels.merge(df_hotel_meteo, on='city', how='left')\n",
-    "\n",
-    "#Enregistrer le nouveau dataframe\n",
-    "df_hotel_meteo.to_csv('../hotel_data/booking_hotels_meteo.csv', index=False, encoding='utf-8')"
+    "print(\"✅ df_hotels uploadé sur S3 (raw/hotels/booking_hotels_raw.csv)\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kayak_project",
+   "display_name": "kayak-project",
    "language": "python",
    "name": "python3"
   },
@@ -267,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
